# side-projects

./: .gitignore  README.md
financial-statement-downloader/: .babelrc  package.json  webpack.config.js
financial-statement-downloader/src/: manifest.json
financial-statement-downloader/src/js/: adp_workforcenow_content_script.js  background.js  wells_fargo_content_script.js
financial-statement-downloader/src/js/popup/: greeting_component.jsx
procedural-generation/packer/: .gitignore  packer.json
procedural-generation/procedural-generation/: procedural-generation.cabal  stack.yaml
procedural-generation/procedural-generation/app/: Main.hs
procedural-generation/procedural-generation/src/: ArrayBuilder.hs  Display.hs  Geometry.hs  Wave.hs
procedural-generation/procedural-generation/src/Display/: Geometry.hs
procedural-generation/procedural-generation/src/Geometry2/: ConvexPolygons.hs  DiscreteSurfaces.hs  Fields.hs  Geodesic.hs  Primitives.hs
procedural-generation/procedural-generation/test/: Spec.hs
procedural-generation/procedural-generation/test/Instances/: Linear.hs
procedural-generation/procedural-generation/test/Tests/Geometry2/: Geodesic.hs  Primitives.hs  TestUtilities.hs
text/: .gitignore  generation.py  start-instance  words.py
