name:                procedural-generation
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/procedural-generation#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Geometry2.DiscreteSurfaces
                     , Geometry2.Geodesic
                     , Geometry2.Primitives
                     , Display.Geometry
                     , Display
                     , Wave
  build-depends:       base >= 4.7 && < 5
                     , linear
                     , vector
                     , GLUT
                     , containers
                     , MonadRandom
                     , time
                     , monadlist
  default-language:    Haskell2010

executable procedural-generation-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , procedural-generation
                     , linear
                     , vector
                     , GLUT
                     , containers
  default-language:    Haskell2010

test-suite procedural-generation-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , procedural-generation
                     , QuickCheck 
                     , tasty
                     , tasty-quickcheck
                     , linear
                     , vector
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/procedural-generation
